--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -9,6 +9,34 @@ services:
     ports:
       - 5173:5173
     container_name: todo-frontend-dev1
+  mongo:
+    image: mongo
+    ports:
+      - 3456:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes:
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo_data:/data/db
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
+      - ./todo-backend/redis_data:/data
+  todo-backend:
+    image: todo-backend-dev
+    volumes:
+      - ./todo-backend/:/usr/src/app
+    ports:
+      - 3000:3000
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - CHOKIDAR_USEPOLLING=true
   nginx:
     image: nginx:1.20.1
     volumes:
@@ -18,3 +46,5 @@ services:
     container_name: reverse-proxy1
     depends_on:
       - todo-frontend
+      - todo-backend
+    
