--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -14,7 +14,8 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://todo-backend:3000;
+
+      proxy_pass http://todo-backend:3000/;
     }
   }
 }
