--- a/my-app/backend/package.json
+++ b/my-app/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "jest --runInBand",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js",
+    "start": "node index.js"
   },
   "author": "Sisu Vepsäläinen",
   "license": "MIT",
